# tauri-start-solid

./: .editorconfig  .env.example  .gitignore  .lefthook.yml  .ncurc.json  .oxfmtrc.json  .oxlintrc.json  .rtk.json  LICENSE-MIT  README.md  biome.json  compose.yaml  degit.json  index.html  lefthook.yml  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.build.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/setup-sdk/: action.yml
.github/workflows/: ci-test.yml.example  release.yml.example  test.yml.example
.storybook/: main.ts  manager-head.html  manager.tsx  preview.tsx  themes.ts
.storybook/_docs/: introduction.mdx
.storybook/components/: decorators.tsx  link.tsx
scripts/: build-dist.sh  prepare.sh  update.json.example
src/: app.tsx  hotkeys.ts  main.tsx  routes.tsx
src-app/: main.tsx
src-app/components/: boundaries.tsx  button.tsx  checkbox.tsx  font-preview.tsx  font-size-input.tsx  label.tsx  select.tsx  setting-row.tsx  settings-provider.tsx  switch.tsx  title-bar.tsx  toast.tsx
src-app/components/base-ui/: index.ts
src-app/components/base-ui/button/: button.mdx  button.stories.tsx  button.tsx
src-app/components/theme/: switcher.tsx
src-app/components/titlebar/: titlebar.tsx
src-app/context/hooks/: use-updater.ts
src-app/context/stores/: ui.store.ts
src-app/hooks/: use-app-info.ts  use-theme-attributes.ts  use-theme.ts  use-title-bar.ts
src-app/layouts/: app-layout.tsx  settings-layout.tsx
src-app/providers/: settings-provider.tsx  theme-provider.tsx
src-app/routes/: -errors.tsx  __root.tsx
src-app/routes/(primary)/: -title-bar.tsx  index.tsx  route.tsx
src-app/routes/(settings)/: -font-size-input.tsx  -setting-row.tsx  -title-bar.tsx  route.tsx  settings.about.tsx  settings.appearance.tsx  settings.general.tsx  settings.index.tsx  settings.updates.tsx
src-app/schemas/: settings.schema.ts
src-app/services/: demo.service.ts  fonts.service.ts  settings.service.ts  updater.service.ts
src-app/stores/: app-info.store.ts  settings.store.ts  settings.ts
src-app/styles/: common.css.ts  global.css.ts  globals.css  layout.css.ts  scrollbar.css  sprinkles.css.ts  theme.css  theme.css.ts  utils.css.ts
src-app/styles/components/: button.css.ts  title-bar.css.ts
src-app/styles/screens/: error.css.ts  index.css.ts  settings.css.ts
src-app/styles/themes/: default.css  modern.css
src-app/types/: settings.ts
src-app/views/: settings.tsx
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  rustfmt.toml  tauri.conf.json  tauri.conf.json.example
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: hooks.rs  lib.rs  main.rs  meta.rs  state.rs  store.rs  tray.rs  utils.rs  window.rs
src-tauri/src/cmd/: example.rs  mod.rs
src-tauri/src/commands/: fonts.rs  mod.rs  settings.rs  updater.rs
src-tauri/src/config/: mod.rs  script.rs  types.rs
src-tauri/src/core/: cmd.rs  logger.rs  menu.rs  mod.rs  state.rs  tray.rs  utils.rs  window.rs
src-tauri/src/core/menu/: mod.rs  types.rs
src-tauri/src/core/menu/builder/: common.rs  macos.rs  manager.rs  mod.rs
src-tauri/src/core/menu/handler/: menu_app.rs  menu_file.rs  menu_help.rs  menu_tray.rs  menu_view.rs  menu_window.rs  mod.rs
src-tauri/src/core/settings/: default.rs  manager.rs  mod.rs  store.rs  types.rs
src-tauri/src/core/theme/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/core/updater/: mod.rs  state.rs
src-tauri/src/database/: mod.rs
src-tauri/src/database/kvstore/: connection.rs  mod.rs  models.rs  operations.rs
src-tauri/src/menu/: builder.rs  handler.rs  mod.rs
src-tauri/src/theme/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/tray/: handler.rs  menu.rs  mod.rs
src-tauri/src/utils/: crypto.rs  fonts.rs  mod.rs  time.rs
src/assets/styles/: app.css  globals.css  main.css  scrollbar.css
src/components/: loader.tsx  theme.tsx
src/components/base-ui/: index.ts
src/components/base-ui/badge/: badge.tsx
src/components/base-ui/button/: button.css.ts  button.stories.tsx  button.tsx  index.ts
src/components/base-ui/checkbox/: checkbox.tsx
src/components/base-ui/link/: link.tsx
src/components/base-ui/radio-group/: radio-group.tsx
src/components/base-ui/tabs/: tabs.tsx
src/components/base-ui/textfield/: textfield.css.ts  textfield.tsx
src/components/elements/input/: NumberInput.tsx  number-input.tsx
src/components/layouts/: index.ts  primary.tsx  settings.tsx
src/components/loaders/: app-loader.tsx  screen-loader.tsx
src/components/theme/: provider.tsx  switcher.tsx
src/components/titlebar/: CaptionControl.tsx  TitleBar.tsx  titlebar.css  titlebar.tsx  traffic-light.tsx
src/context/hooks/: use-theme.ts
src/context/stores/: ui.store.ts
src/hooks/: useAppSettings.ts
src/layouts/: root-layout.tsx
src/screens/: _errors.tsx  welcome.tsx
src/screens/settings/: about.tsx  appearance.tsx  changelog.tsx  general.tsx  index.ts  shortcuts.tsx  updates.tsx
src/stores/: ui.store.ts
src/styles/: global.css  scrollbar.css
src/types/: bindings.ts
src/utils/: helpers.ts  settings.ts
src/views/: 404.tsx  home.tsx  settings.tsx
tests/: setup-client.ts
tests/components/: button.test.tsx
